tests/cases/modules/ok/package-module-main.ari
mod package_math;

fn main() -> i64 {
  package_math::value()
}
