tests/cases/modules/errors/private-module-function.ari
mod Secret {
  fn value() -> i64 {
    return 1;
  }
}

fn main() -> i64 {
  return Secret::value();
}
